fixed spacing

--- a/less/partials/section--hosts.less
+++ b/less/partials/section--hosts.less
@@ -8,9 +8,14 @@
   max-width: 808px;
   padding-left: 0;
 }
+
+.performances-by {
+  margin: 100px 0 0 0;
+}
+
 .special-performance {
   padding: 0;
-  margin: 1em 0;
+  margin: 1em 0 100px 0;
 }
 
 .sponsors {
