--- a/less/partials/section--info.less
+++ b/less/partials/section--info.less
@@ -1,5 +1,5 @@
 #info-details {
-  padding: 0;
+  padding: 25px 0 0 0;
 }
 
 .reg-text {
@@ -23,5 +23,10 @@
 }
 
 .summary-text {
-  padding: 0 25%;
+  max-width: 768px;
+  margin: auto;
+}
+
+.hbcfl {
+  margin-top: 50px;
 }
